Update background body styles. Fix footer white space

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,16 +22,13 @@
   box-sizing: border-box;
 }
 html {
-  height: 100%;
   font-size: 62.5%;
 }
 body {
   max-width: 1440px;
-  min-height: 100%;
-  margin: auto;
+  margin: 0 auto;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 1.6rem;
-  background-color: var(--white);
   background-image: var(--body-gradient);
 }
 figure,
@@ -40,7 +37,7 @@ img {
   display: block;
 }
 img {
-  max-width: 100%;
+  width: 100%;
   object-fit: cover;
 }
 /******************************
@@ -82,7 +79,7 @@ img {
 }
 .content__text {
   width: 33ch;
-  margin: 2rem 0;
+  margin: 4rem 0;
   font-size: clamp(1.4rem, calc(1.4rem + ((1vw - 0.32rem) * 0.1912)), 1.6rem);
   font-weight: 400;
   color: var(--desaturated-red);
@@ -135,15 +132,35 @@ img {
   text-align: left;
   opacity: 0;
 }
+.footer {
+  margin-top: auto;
+  padding: 2rem;
+  text-align: center;
+  color: var(--dark-grayish-red);
+ 
+}
+.footer__attribution a {
+  text-decoration: none;
+  color: var(--dark-grayish-red);
+  transition: color .1s ease;
+}
+.footer__attribution a:hover,
+.footer__attribution a:focus-visible {
+  color: var(--soft-red);
+}
 
 /******************************
-  MEDIA QUERIES 992px
+  MEDIA QUERIES 1024px
 /******************************/
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1024px) {
   body {
     background-image: url(./images/bg-pattern-desktop.svg);
-    background-repeat: space;
+    background-repeat: no-repeat;
+    background-size: 58%;
     background-position: top left;
+  }
+  main {
+    height: 100vh;
   }
   .hero__section {
     padding: 0;
@@ -157,17 +174,19 @@ img {
     order: 2;
     grid-column: 2 / 3;
     justify-self: end;
-    margin-top: -13rem;
+  }
+  .hero__image img {
+    margin-top: -11.5rem;
   }
   .content {
     order: 1;
     grid-column: 1 / 2;
     align-items: flex-start;
-    margin-top: 5rem;
     text-align: left;
   }
   .content__text {
     width: 44ch;
+    margin: 2rem 0;
   }
   .input__container {
     width: 400px;
